--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/assets/logo.9022d9e8.svg" />
+    <link rel="icon" type="image/svg+xml" href="/convertingInput/assets/logo.9022d9e8.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite React-ts Eslint Prettier</title>
-    <script type="module" crossorigin src="/assets/index.07ede7bd.js"></script>
-    <link rel="stylesheet" href="/assets/index.cbda4b9c.css">
+    <script type="module" crossorigin src="/convertingInput/assets/index.07ede7bd.js"></script>
+    <link rel="stylesheet" href="/convertingInput/assets/index.cbda4b9c.css">
   </head>
   <body>
     <div id="root"></div>
